examples/compiler_errors/invalid_main_return_type.flx
// expect: compile_error
// expect-error: E412

fn main() -> Int {
    42
}
